Support summaries both with and with the prepilot data included
https://github.com/e-mission/em-public-dashboard/pull/47#issuecomment-1200096926

--- a/viz_scripts/Program_trip_characteristics.ipynb
+++ b/viz_scripts/Program_trip_characteristics.ipynb
@@ -39,10 +39,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "martial-rotation",
+   "id": "southeast-nurse",
    "metadata": {},
    "source": [
     "### Load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "descending-brisbane",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_minipilot_tokens():\n",
+    "    minipilot_uuid_list = [\n",
+    "        UUID(\"576e37c7-ab7e-4c03-add7-02486bc3f42e\"),\n",
+    "        UUID(\"8b563348-52b3-4e3e-b046-a0aaf4fcea15\"),\n",
+    "        UUID(\"5079bb93-c9cf-46d7-a643-dfc86bb05605\"),\n",
+    "        UUID(\"feabfccd-dd6c-4e8e-8517-9d7177042483\"),\n",
+    "        UUID(\"113aef67-400e-4e21-a29f-d04e50fc42ea\"),\n",
+    "        UUID(\"c8b9fe22-86f8-449a-b64f-c18a8d20eefc\"),\n",
+    "        UUID(\"e7b24d99-324d-4d6d-b247-9edc87d3c848\"),\n",
+    "        UUID(\"1044195f-af9e-43d4-9407-60594e5e9938\"),\n",
+    "        UUID(\"898b1a5e-cdd4-4a0c-90e4-942fa298e456\"),\n",
+    "        UUID(\"1d292b85-c549-409a-a10d-746e957582a0\"),\n",
+    "        UUID(\"cb3222a7-1e72-4a92-8b7b-2c4795402497\"),\n",
+    "        UUID(\"efdbea3b-eef6-48fc-9558-7585f4ad6f24\"),\n",
+    "        UUID(\"960835ac-9d8a-421d-8b8a-bf816f8a4b92\"),\n",
+    "    ]\n",
+    "    for uuid in minipilot_uuid_list:\n",
+    "        curr_ue = edb.get_uuid_db().find_one({\"uuid\": uuid})\n",
+    "        curr_token = curr_ue[\"user_email\"]\n",
+    "        if curr_token.split(\"_\")[0] != \"prepilot\":\n",
+    "            curr_update_result = edb.get_uuid_db().update_one({\"uuid\": uuid}, {\"$set\": {\"user_email\": \"prepilot_\"+curr_token}})\n",
+    "            print(\"update result for %s is %s\" % (uuid, curr_update_result.raw_result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "spatial-breach",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fix_minipilot_tokens()"
    ]
   },
   {
@@ -142,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "following-poultry",
+   "id": "dried-roller",
    "metadata": {},
    "source": [
     "### Transform"
@@ -231,8 +272,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "intensive-mills",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_summary_df.drop(\"prepilot\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "nuclear-aquatic",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_user_summary_df.drop(\"prepilot\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "hidden-choice",
+   "id": "confused-retail",
    "metadata": {},
    "source": [
     "### Plot"
@@ -251,11 +312,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "widespread-forward",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_summary_df.drop(\"prepilot\").label_pct.plot(kind=\"bar\", ylabel=\"% of labeled trips\", title=\"Variation in labeling percentage across programs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "banned-slovenia",
    "metadata": {},
    "outputs": [],
    "source": [
     "ax=label_user_summary_df.label_pct.plot(kind=\"bar\", xticks=[])\n",
+    "ax.set_xlabel(\"user\")\n",
+    "ax.set_ylabel(\"Percentage of trips labeled\")\n",
+    "ax.set_title(\"Percentage of trips labeled by each user\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "pacific-blues",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax=label_user_summary_df.drop(\"prepilot\").label_pct.plot(kind=\"bar\", xticks=[])\n",
     "ax.set_xlabel(\"user\")\n",
     "ax.set_ylabel(\"Percentage of trips labeled\")\n",
     "ax.set_title(\"Percentage of trips labeled by each user\")"
@@ -284,6 +368,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "disciplinary-shanghai",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_prepilot_flattened_label_user_summary_df = label_user_summary_df.drop(\"prepilot\").reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "centered-solution",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_prepilot_flattened_label_user_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "suitable-lloyd",
    "metadata": {},
    "outputs": [],
@@ -298,11 +402,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "suburban-hungarian",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = no_prepilot_flattened_label_user_summary_df.boxplot(column=['label_pct'], by=\"program\")\n",
+    "type(ax)\n",
+    "ax.set_title(\"\")\n",
+    "ax.set_ylabel(\"percentage of labeled trips\")\n",
+    "ax.get_figure().suptitle(\"Labeling rate by program\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "streaming-qatar",
    "metadata": {},
    "outputs": [],
    "source": [
     "ax = flattened_label_user_summary_df.dropna().sort_values(by=\"label_pct\").label_pct.plot.bar(y=\"label_pct\", xticks=[])\n",
+    "ax.set_xlabel(\"user\")\n",
+    "ax.set_ylabel(\"Percentage of trips labeled\")\n",
+    "ax.set_title(\"Percentage of trips labeled by user\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "paperback-alarm",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = no_prepilot_flattened_label_user_summary_df.dropna().sort_values(by=\"label_pct\").label_pct.plot.bar(y=\"label_pct\", xticks=[])\n",
     "ax.set_xlabel(\"user\")\n",
     "ax.set_ylabel(\"Percentage of trips labeled\")\n",
     "ax.set_title(\"Percentage of trips labeled by user\")"
@@ -331,8 +462,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "nuclear-uniform",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax=sns.barplot(data=no_prepilot_flattened_label_user_summary_df, x=\"program\", y=\"label_pct\")\n",
+    "ax.set_ylabel(\"Percentage of trips labeled\")\n",
+    "ax.set_title(\"Mean labeling rate and variance per program\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "wired-musical",
+   "id": "light-offset",
    "metadata": {},
    "source": [
     "### Describe"
@@ -341,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "imported-polyester",
+   "id": "distributed-camcorder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +493,7 @@
     "    print(f\"Number of trips with at least one label {len(df[df.user_input != {}])} from {len(df[df.user_input != {}].user_id.unique())} unique users\")\n",
     "    no_user_label_ct_df = df[df.user_input == {}]\n",
     "    print(f\"Trips without user specified labels {len(no_user_label_ct_df)} from {len(no_user_label_ct_df.user_id.unique())} users\")\n",
-    "    is_empty_check = lambda ll: len(ll) == 0\n",
+    "    is_empty_check = lambda ll: len(ll) == 0 if type(ll) == list else True\n",
     "    print(f\"Trips without user label but with inferred label {len(no_user_label_ct_df[~no_user_label_ct_df.inferred_labels.apply(is_empty_check)])}\")\n",
     "    print(f\"Trips without user label or inferred label {len(no_user_label_ct_df[no_user_label_ct_df.inferred_labels.apply(is_empty_check)])}\")\n",
     "    stage_df = df[df.program == 'stage']\n",
@@ -368,7 +511,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fantastic-shell",
+   "id": "official-working",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_df = pd.DataFrame({\"inferred_labels\": [[], np.NaN, [1,2], [3.4]]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "mexican-buying",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sophisticated-escape",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# is_empty_check = lambda ll: len(ll) == 0 if type(ll) == list else True\n",
+    "# test_df.inferred_labels.apply(is_empty_check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fundamental-richards",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +552,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "productive-rider",
+   "id": "manufactured-technical",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "describe_label_info(trip_program_df[trip_program_df.program != \"prepilot\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "unexpected-rendering",
    "metadata": {
     "scrolled": true
    },
@@ -390,7 +574,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "soviet-vacation",
+   "id": "collective-atlanta",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "describe_label_info(labeled_ct[labeled_ct.program != \"prepilot\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "indoor-jumping",
    "metadata": {},
    "outputs": [],
    "source": []
