More viz updates

--- a/viz_scripts/biogeme_test.ipynb
+++ b/viz_scripts/biogeme_test.ipynb
@@ -782,6 +782,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Stats"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -794,6 +801,49 @@
     "print(f\"New activity: {len(df_ebike_new_travel) / len(df_ebike)}\")\n",
     "print(f\"Unlabeled all trips: {len(data[data.Replaced_mode==10]) / len(data)}\")\n",
     "print(f\"Unlabeled ebike trips (we model these): {len(df_ebike_unlabeled) / len(df_ebike)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Trip_purpose'] = data['Trip_purpose'].replace([0,1,2,3,4,5,6,7,8,9,10,11], all_categories[3])\n",
+    "data['Mode_confirm'] = data['Mode_confirm'].replace([0,1,2,3,4,5,6,7], all_categories[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Substitution rate of ebike trips not including new trips\n",
+    "plot_data = data[~data['Trip_purpose'].isin(['not_a_trip'])].groupby(['Trip_purpose']).count()[['Mode_confirm']].reset_index()\n",
+    "plot_data = plot_data.sort_values('Mode_confirm', ascending=False)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(13,6))\n",
+    "sns.barplot(ax=ax, data=plot_data, x='Trip_purpose', y='Mode_confirm', color='darkblue').set(title='Trip Purpose', xlabel='Stated Purpose', ylabel='Count')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.subplots_adjust(bottom=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Substitution rate of ebike trips not including new trips\n",
+    "plot_data = data[~data['Trip_purpose'].isin(['not_a_trip'])]\n",
+    "plot_data = data[data['distance_miles']<10]\n",
+    "plot_data['Mode'] = plot_data['Mode_confirm']\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(13,8))\n",
+    "sns.histplot(ax=ax, data=plot_data, x='distance_miles', hue='Mode', kde=True).set(title='Trip Distance', xlabel='Distance (mi)', ylabel='Count')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.subplots_adjust(bottom=0.25)"
    ]
   },
   {
