--- a/viz_scripts/biogeme_test.ipynb
+++ b/viz_scripts/biogeme_test.ipynb
@@ -490,7 +490,7 @@
    "outputs": [],
    "source": [
     "# Join the expanded database data to socioeconomic data\n",
-    "socio_data = pd.read_csv('./replacement_modeling/Can Do Colorado eBike Program - en.csv')\n",
+    "socio_data = pd.read_csv('./Can Do Colorado eBike Program - en.csv')\n",
     "socio_data.rename(columns={'Unique User ID (auto-filled, do not edit)':'user_id',\n",
     "                          'Please identify which category represents your total household income, before taxes, for last year.':'HHINC',\n",
     "                          'How many motor vehicles are owned, leased, or available for regular use by the people who currently live in your household?':'VEH',\n",
@@ -760,6 +760,8 @@
    },
    "outputs": [],
    "source": [
+    "# Setting up dataframes for different analyses throughout the notebook\n",
+    "\n",
     "# All replaced trips\n",
     "df_replaced_trips = data[~data['Replaced_mode'].isin([8,9,10])].copy()\n",
     "\n",
@@ -800,15 +802,9 @@
     "df_label_non_ebike_data = df_label_data[~df_label_data['Mode_confirm'].isin([7])].copy()\n",
     "\n",
     "# Set up K-fold cross validation\n",
-    "kf = KFold(n_splits=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "kf = KFold(n_splits=10)\n",
+    "\n",
+    "# Collect all scores to show at end of modeling\n",
     "score_results = {}"
    ]
   },
@@ -900,7 +896,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train and Test on Primary"
+    "### Train on Primary Test on Primary"
    ]
   },
   {
@@ -909,42 +905,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test random forest on the primary mode\n",
-    "accuracy = []\n",
-    "f1 = []\n",
-    "confusion = []\n",
-    "for train_index, test_index in kf.split(df_non_ebike.values):\n",
-    "    X_train, X_test = df_non_ebike[feature_list].values[train_index], df_non_ebike[feature_list].values[test_index]\n",
-    "    y_train, y_test = df_non_ebike['Mode_confirm'].values[train_index], df_non_ebike['Mode_confirm'].values[test_index]\n",
+    "# Train and test model\n",
+    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_non_ebike, 'Mode_confirm', df_non_ebike, 'Mode_confirm', kf, feature_list)\n",
     "\n",
-    "    # Train random forest on non-ebike trip training set\n",
-    "    rf = RandomForestClassifier(n_estimators=50)\n",
-    "    rf.fit(X_train,y_train)\n",
-    "\n",
-    "    y_pred = rf.predict(X_test)\n",
-    "    accuracy.append(sum(y_pred==y_test) / len(y_test))\n",
-    "    f1.append(sklearn.metrics.f1_score(y_test, y_pred, average='weighted'))\n",
-    "    confusion.append(sklearn.metrics.confusion_matrix(y_test, y_pred, labels=[0,1,2,3,4,5,6], normalize='pred'))\n",
-    "\n",
+    "# Save scores for model comparison\n",
+    "score_results['rf_primary_primary'] = (np.mean(accuracy), np.mean(f1))\n",
     "print(f\"Accuracy: {np.mean(accuracy)}\")\n",
     "print(f\"F1: {np.mean(f1)}\")\n",
     "\n",
-    "# Use the parameters from this model for final labeling\n",
-    "rf_keep = rf\n",
-    "\n",
-    "# Collect all model scores for comparison at the end\n",
-    "score_results['rf_primary_primary'] = (np.mean(accuracy), np.mean(f1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Average and plot the confusion matrices\n",
     "confusion_mean = np.mean(np.array(confusion), axis=0)\n",
-    "\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
     "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values[:-1], yticklabels=all_categories[0].values[:-1], cbar=False).set(title='Random Forest Confusion Matrix (Chosen)', xlabel='Predicted', ylabel='Actual')\n",
     "plt.subplots_adjust(bottom=0.25)"
@@ -963,42 +933,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test random forest on the replaced mode\n",
-    "accuracy = []\n",
-    "f1 = []\n",
-    "confusion = []\n",
-    "for train_index, test_index in kf.split(df_non_ebike.values):\n",
-    "    X_train, X_test = df_non_ebike[feature_list].values[train_index], df_non_ebike[feature_list].values[test_index]\n",
-    "    y_train, y_test = df_non_ebike['Mode_confirm'].values[train_index], df_non_ebike['Mode_confirm'].values[test_index]\n",
+    "# Train and test model\n",
+    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_non_ebike, 'Mode_confirm', df_ebike, 'Replaced_mode', kf, feature_list)\n",
     "\n",
-    "    # Train random forest on non-ebike trip training set\n",
-    "    rf = RandomForestClassifier(n_estimators=50)\n",
-    "    rf.fit(X_train,y_train)\n",
+    "# Use the parameters from this model for final labeling\n",
+    "rf_keep = rf\n",
     "\n",
-    "    X_test = df_ebike[feature_list].values\n",
-    "    y_test = df_ebike['Replaced_mode'].values\n",
-    "\n",
-    "    y_pred = rf.predict(X_test)\n",
-    "    accuracy.append(sum(y_pred==y_test) / len(y_test))\n",
-    "    f1.append(sklearn.metrics.f1_score(y_test, y_pred, average='weighted'))\n",
-    "    confusion.append(sklearn.metrics.confusion_matrix(y_test, y_pred, labels=[0,1,2,3,4,5,6], normalize='pred'))\n",
-    "\n",
+    "# Save scores for model comparison\n",
+    "score_results['rf_primary_replaced'] = (np.mean(accuracy), np.mean(f1))\n",
     "print(f\"Accuracy: {np.mean(accuracy)}\")\n",
     "print(f\"F1: {np.mean(f1)}\")\n",
     "\n",
-    "# Collect all model scores for comparison at the end\n",
-    "score_results['rf_primary_replaced'] = (np.mean(accuracy), np.mean(f1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Average and plot the confusion matrices\n",
     "confusion_mean = np.mean(np.array(confusion), axis=0)\n",
-    "\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
     "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values[:-1], yticklabels=all_categories[0].values[:-1], cbar=False).set(title='Random Forest Confusion Matrix (Replaced)', xlabel='Predicted', ylabel='Actual')\n",
     "plt.subplots_adjust(bottom=0.25)"
@@ -1017,26 +964,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train AND Test random forest on the replaced mode\n",
-    "accuracy = []\n",
-    "f1 = []\n",
-    "for train_index, test_index in kf.split(df_ebike.values):\n",
-    "    X_train, X_test = df_ebike[feature_list].values[train_index], df_ebike[feature_list].values[test_index]\n",
-    "    y_train, y_test = df_ebike['Replaced_mode'].values[train_index], df_ebike['Replaced_mode'].values[test_index]\n",
+    "# Train and test model\n",
+    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_ebike, 'Replaced_mode', df_ebike, 'Replaced_mode', kf, feature_list)\n",
     "\n",
-    "    # Train random forest on non-ebike trip training set\n",
-    "    rf = RandomForestClassifier(n_estimators=50)\n",
-    "    rf.fit(X_train,y_train)\n",
-    "\n",
-    "    y_pred = rf.predict(X_test)\n",
-    "    accuracy.append(sum(y_pred==y_test) / len(y_test))\n",
-    "    f1.append(sklearn.metrics.f1_score(y_test, y_pred, average='weighted'))\n",
-    "\n",
+    "# Save scores for model comparison\n",
+    "score_results['rf_replaced_replaced'] = (np.mean(accuracy), np.mean(f1))\n",
     "print(f\"Accuracy: {np.mean(accuracy)}\")\n",
     "print(f\"F1: {np.mean(f1)}\")\n",
     "\n",
-    "# Collect all model scores for comparison at the end\n",
-    "score_results['rf_replaced_replaced'] = (np.mean(accuracy), np.mean(f1))"
+    "# Average and plot the confusion matrices\n",
+    "confusion_mean = np.mean(np.array(confusion), axis=0)\n",
+    "fig, ax = plt.subplots(figsize=(6,6))\n",
+    "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values[:-1], yticklabels=all_categories[0].values[:-1], cbar=False).set(title='Random Forest Confusion Matrix (Replaced-Replaced)', xlabel='Predicted', ylabel='Actual')\n",
+    "plt.subplots_adjust(bottom=0.25)"
    ]
   },
   {
@@ -1052,28 +992,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy = []\n",
-    "f1 = []\n",
-    "for train_index, test_index in kf.split(df_label_non_ebike_data.values):\n",
-    "    X_train, X_test = df_label_non_ebike_data[feature_list].values[train_index], df_label_non_ebike_data[feature_list].values[test_index]\n",
-    "    y_train, y_test = df_label_non_ebike_data['mode_confirm'].values[train_index], df_label_non_ebike_data['Replaced_mode'].values[test_index]\n",
+    "# Train and test model\n",
+    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_label_non_ebike_data, 'mode_confirm', df_label_ebike_data, 'Replaced_mode', kf, feature_list)\n",
     "\n",
-    "    # Train random forest on non-ebike trip training set\n",
-    "    rf = RandomForestClassifier(n_estimators=50)\n",
-    "    rf.fit(X_train,y_train)\n",
-    "\n",
-    "    X_test = df_label_ebike_data[feature_list].values\n",
-    "    y_test = df_label_ebike_data['Replaced_mode'].values\n",
-    "\n",
-    "    y_pred = rf.predict(X_test)\n",
-    "    accuracy.append(sum(y_pred==y_test) / len(y_test))\n",
-    "    f1.append(sklearn.metrics.f1_score(y_test, y_pred, average='weighted'))\n",
-    "\n",
+    "# Save scores for model comparison\n",
+    "score_results['rf_sensed_replaced'] = (np.mean(accuracy), np.mean(f1))\n",
     "print(f\"Accuracy: {np.mean(accuracy)}\")\n",
     "print(f\"F1: {np.mean(f1)}\")\n",
     "\n",
-    "# Collect all model scores for comparison at the end\n",
-    "score_results['rf_sensed_replaced'] = (np.mean(accuracy), np.mean(f1))"
+    "# Average and plot the confusion matrices\n",
+    "confusion_mean = np.mean(np.array(confusion), axis=0)\n",
+    "fig, ax = plt.subplots(figsize=(6,6))\n",
+    "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values[:-1], yticklabels=all_categories[0].values[:-1], cbar=False).set(title='Random Forest Confusion Matrix (Sensed-Replaced)', xlabel='Predicted', ylabel='Actual')\n",
+    "plt.subplots_adjust(bottom=0.25)"
    ]
   },
   {
@@ -1089,35 +1020,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Question: How will we know non-labeled user took an ebike trip?\n",
-    "\n",
-    "accuracy = []\n",
-    "f1 = []\n",
-    "for user in list(np.unique(df_label_data.user_id)):\n",
-    "    # Split out data for one user to treat as the unlabeled data\n",
-    "    labeled_df = df_label_non_ebike_data[df_label_non_ebike_data['user_id']!=user]\n",
-    "    sensed_df = df_label_ebike_data[df_label_ebike_data['user_id']==user]\n",
+    "# Train and test model (10 users for now)\n",
+    "accuracy_holdout = []\n",
+    "f1_holdout = []\n",
+    "confusion_holdout = []\n",
+    "for user in list(np.unique(df_ebike.user_id))[:10]:\n",
     "    \n",
-    "    if len(sensed_df) == 0:\n",
+    "    # Remove user from training data, keep only user in test data\n",
+    "    labeled_df = df_non_ebike[df_non_ebike['user_id']!=user]\n",
+    "    unlabeled_df = df_ebike[df_ebike['user_id']==user]\n",
+    "\n",
+    "    # Some users have no ebike trips; skip them\n",
+    "    if len(unlabeled_df)==0:\n",
     "        print(f\"User with no ebike trips {user}\")\n",
     "        continue\n",
-    "\n",
-    "    # Train the model normally on the labeled data, test the model on the holdout user (sensed)\n",
-    "    X_train, X_test = labeled_df[feature_list].values, sensed_df[feature_list].values\n",
-    "    y_train, y_test = labeled_df['Mode_confirm'].values, sensed_df['Replaced_mode'].values\n",
-    "\n",
-    "    rf = RandomForestClassifier(n_estimators=50)\n",
-    "    rf.fit(X_train,y_train)\n",
-    "\n",
-    "    y_pred = rf.predict(X_test)\n",
-    "    accuracy.append(sum(y_pred==y_test) / len(y_test))\n",
-    "    f1.append(sklearn.metrics.f1_score(y_test, y_pred, average='weighted'))\n",
     "    \n",
-    "print(f\"Accuracy: {np.mean(accuracy)}\")\n",
-    "print(f\"F1: {np.mean(f1)}\")\n",
+    "    # Train on all trips by other users, test on only ebike trips for the \"unlabeled\" user\n",
+    "    rf, accuracy, f1, confusion = replacement_models.random_forest(labeled_df, 'Mode_confirm', unlabeled_df, 'Replaced_mode', feature_list)\n",
+    "    accuracy_holdout.append(accuracy)\n",
+    "    f1_holdout.append(f1)\n",
+    "    confusion_holdout.append(confusion)\n",
     "\n",
-    "# Collect all model scores for comparison at the end\n",
-    "score_results['rf_primary_holdout'] = (np.mean(accuracy), np.mean(f1))"
+    "# Save scores for model comparison\n",
+    "score_results['rf_holdout_replaced'] = (np.mean(accuracy_holdout), np.mean(f1_holdout))\n",
+    "print(f\"Accuracy: {np.mean(accuracy_holdout)}\")\n",
+    "print(f\"F1: {np.mean(f1_holdout)}\")\n",
+    "\n",
+    "# Average and plot the confusion matrices\n",
+    "confusion_mean = np.mean(confusion_holdout, axis=0).reshape(7,7)\n",
+    "fig, ax = plt.subplots(figsize=(6,6))\n",
+    "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values[:-1], yticklabels=all_categories[0].values[:-1], cbar=False).set(title='Random Forest Confusion Matrix (Holdout-Replaced)', xlabel='Predicted', ylabel='Actual')\n",
+    "plt.subplots_adjust(bottom=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train and test model (10 users for now)\n",
+    "samples_pct = []\n",
+    "accuracy_pct = []\n",
+    "f1_pct = []\n",
+    "for pct in range(1,10,1):\n",
+    "    samples_pct.append(pct)\n",
+    "    labeled_df = df_non_ebike.sample(n=int(pct/100*len(df_non_ebike)))\n",
+    "    \n",
+    "    # Train on % of all trips, test on all ebike trips\n",
+    "    rf, accuracy, f1, confusion = replacement_models.random_forest(labeled_df, 'Mode_confirm', df_ebike, 'Replaced_mode', feature_list)\n",
+    "    accuracy_pct.append(accuracy[0])\n",
+    "    f1_pct.append(f1[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_data = pd.DataFrame({'samples_pct':samples_pct, 'accuracy_pct':accuracy_pct, 'f1_pct':f1_pct})\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(13,6))\n",
+    "sns.barplot(ax=ax, data=plot_data, x='samples_pct', y='accuracy_pct', color='darkblue').set(title='Trip Purpose', xlabel='Stated Purpose', ylabel='Count')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.subplots_adjust(bottom=0.25)"
    ]
   },
   {
@@ -1158,6 +1125,13 @@
    },
    "outputs": [],
    "source": [
+    "# For testing module changes in Jupyter\n",
+    "import importlib\n",
+    "imported_module = importlib.import_module(\"replacement_models\")\n",
+    "importlib.reload(imported_module)\n",
+    "import replacement_models\n",
+    "\n",
+    "\n",
     "X_train, X_test = df_non_ebike, df_non_ebike\n",
     "y_train, y_test = df_non_ebike['Mode_confirm'].values, df_non_ebike['Mode_confirm'].values\n",
     "\n",
