Move models to own file, clean up everything

--- a/viz_scripts/biogeme_test.ipynb
+++ b/viz_scripts/biogeme_test.ipynb
@@ -51,6 +51,8 @@
     "import scaffolding\n",
     "from uuid import UUID\n",
     "\n",
+    "import replacement_models\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -906,7 +908,7 @@
    "outputs": [],
    "source": [
     "# Train and test model\n",
-    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_non_ebike, 'Mode_confirm', df_non_ebike, 'Mode_confirm', kf, feature_list)\n",
+    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_non_ebike, 'Mode_confirm', df_non_ebike, 'Mode_confirm', feature_list, kf)\n",
     "\n",
     "# Save scores for model comparison\n",
     "score_results['rf_primary_primary'] = (np.mean(accuracy), np.mean(f1))\n",
@@ -934,7 +936,7 @@
    "outputs": [],
    "source": [
     "# Train and test model\n",
-    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_non_ebike, 'Mode_confirm', df_ebike, 'Replaced_mode', kf, feature_list)\n",
+    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_non_ebike, 'Mode_confirm', df_ebike, 'Replaced_mode', feature_list, kf)\n",
     "\n",
     "# Use the parameters from this model for final labeling\n",
     "rf_keep = rf\n",
@@ -965,7 +967,7 @@
    "outputs": [],
    "source": [
     "# Train and test model\n",
-    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_ebike, 'Replaced_mode', df_ebike, 'Replaced_mode', kf, feature_list)\n",
+    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_ebike, 'Replaced_mode', df_ebike, 'Replaced_mode', feature_list, kf)\n",
     "\n",
     "# Save scores for model comparison\n",
     "score_results['rf_replaced_replaced'] = (np.mean(accuracy), np.mean(f1))\n",
@@ -993,7 +995,7 @@
    "outputs": [],
    "source": [
     "# Train and test model\n",
-    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_label_non_ebike_data, 'mode_confirm', df_label_ebike_data, 'Replaced_mode', kf, feature_list)\n",
+    "rf, accuracy, f1, confusion = replacement_models.random_forest(df_label_non_ebike_data, 'mode_confirm', df_label_ebike_data, 'Replaced_mode', feature_list, kf)\n",
     "\n",
     "# Save scores for model comparison\n",
     "score_results['rf_sensed_replaced'] = (np.mean(accuracy), np.mean(f1))\n",
@@ -1054,23 +1056,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Train and test model (10 users for now)\n",
-    "samples_pct = []\n",
-    "accuracy_pct = []\n",
-    "f1_pct = []\n",
-    "for pct in range(1,10,1):\n",
-    "    samples_pct.append(pct)\n",
-    "    labeled_df = df_non_ebike.sample(n=int(pct/100*len(df_non_ebike)))\n",
-    "    \n",
-    "    # Train on % of all trips, test on all ebike trips\n",
-    "    rf, accuracy, f1, confusion = replacement_models.random_forest(labeled_df, 'Mode_confirm', df_ebike, 'Replaced_mode', feature_list)\n",
-    "    accuracy_pct.append(accuracy[0])\n",
-    "    f1_pct.append(f1[0])"
+    "### Train on n Samples Primary Test on Replaced"
    ]
   },
   {
@@ -1079,10 +1068,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_data = pd.DataFrame({'samples_pct':samples_pct, 'accuracy_pct':accuracy_pct, 'f1_pct':f1_pct})\n",
+    "# Train and test model (10 users for now)\n",
+    "samples_min = []\n",
+    "user_min = []\n",
+    "accuracy_min = []\n",
+    "f1_min = []\n",
+    "for n_samples in range(1,200,10):\n",
+    "\n",
+    "    # Sample n training data points from all users\n",
+    "    labeled_df = df_non_ebike.sample(n_samples)\n",
+    "\n",
+    "    # Construct model (accuracy/f1 don't matter here; we re-test per user below)\n",
+    "    rf, accuracy, f1, confusion = replacement_models.random_forest(labeled_df, 'Mode_confirm', labeled_df, 'Replaced_mode', feature_list)\n",
+    "\n",
+    "    for user in list(np.unique(df_ebike.user_id))[:100]:\n",
+    "        # Test model per user\n",
+    "        X_test = df_ebike[df_ebike['user_id']==user][feature_list].values\n",
+    "        y_test = df_ebike[df_ebike['user_id']==user]['Replaced_mode'].values\n",
+    "        y_pred = rf.predict(X_test)\n",
+    "        \n",
+    "        accuracy_min.append(sklearn.metrics.accuracy_score(y_test, y_pred))\n",
+    "        f1_min.append(sklearn.metrics.f1_score(y_test, y_pred, average='weighted'))\n",
+    "        \n",
+    "        samples_min.append(n_samples)\n",
+    "        user_min.append(user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_data = pd.DataFrame({'samples_min':samples_min, 'user_min':user_min, 'accuracy_min':accuracy_min, 'f1_min':f1_min})\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(13,6))\n",
-    "sns.barplot(ax=ax, data=plot_data, x='samples_pct', y='accuracy_pct', color='darkblue').set(title='Trip Purpose', xlabel='Stated Purpose', ylabel='Count')\n",
+    "sns.boxplot(ax=ax, data=plot_data, x='samples_min', y='accuracy_min', color='purple').set(title='Accuracy on n Samples', xlabel='n Samples', ylabel='Accuracy')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.subplots_adjust(bottom=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_data = pd.DataFrame({'samples_min':samples_min, 'accuracy_min':accuracy_min, 'f1_min':f1_min})\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(13,6))\n",
+    "sns.barplot(ax=ax, data=plot_data, x='samples_min', y='accuracy_min', color='darkblue').set(title='Accuracy on n Samples', xlabel='n Samples', ylabel='Accuracy')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)"
    ]
