Fixing av, getting MXL to converge

--- a/viz_scripts/biogeme_test.ipynb
+++ b/viz_scripts/biogeme_test.ipynb
@@ -656,28 +656,27 @@
     "\n",
     "def add_mode_availability(data, availability_codes, availability_col, choice_col, replaced_col, is_sp):\n",
     "    mode_list = np.unique(list(availability_codes.values())[:-1])\n",
-    "    available_list = data[availability_col].values\n",
     "    choice_list = data[choice_col].values\n",
     "    replaced_list = data[replaced_col].values\n",
-    "    replaced_in_stated = []\n",
     "    for mode in mode_list:\n",
     "        mode_avail = []\n",
-    "        i=0\n",
-    "        for available in available_list:\n",
+    "        for i, available in enumerate(data[availability_col].values):\n",
     "            available_modes = [availability_codes[x] for x in available.split(';')]\n",
-    "            # Check if mode is available, or chosen, or was the replacement\n",
-    "            if include_replaced_modes_as_valid:\n",
-    "                mode_check = mode in available_modes or mode==choice_list[i] or mode==replaced_list[i]\n",
+    "            # For SP: Replacement/stated available should be 1, chosen should be 0\n",
+    "            if is_sp:\n",
+    "                if mode==choice_list[i]:\n",
+    "                    mode_check = False\n",
+    "                else:\n",
+    "                    mode_check = mode==replaced_list[i] or mode in available_modes\n",
+    "            # For RP: Chosen/replacement/stated available should be 1\n",
     "            else:\n",
-    "                mode_check = mode in available_modes or mode==choice_list[i]\n",
-    "            # If data is SP and mode was chosen, then it is not available\n",
-    "            if is_sp and mode==choice_list[i]:\n",
-    "                mode_check = False\n",
+    "                mode_check = mode==choice_list[i] or mode==replaced_list[i] or mode in available_modes\n",
+    "            # Keep binary list of which trips the mode was available for\n",
     "            if mode_check:\n",
     "                mode_avail.append(1)\n",
     "            else:\n",
     "                mode_avail.append(0)\n",
-    "            i+=1\n",
+    "        # For each mode add a column with binary availability\n",
     "        data['av_'+mode] = mode_avail\n",
     "\n",
     "    return data\n",
@@ -689,6 +688,10 @@
     "data_sp['is_sp'] = True\n",
     "data_rp['mode_choice'] = data_rp['Mode_confirm']\n",
     "data_sp['mode_choice'] = data_sp['Replaced_mode']\n",
+    "\n",
+    "# The SP data cannot include trips where the chosen/replaced modes are stated the same\n",
+    "# We need to mark the chosen mode as unavailable in the SP data, which breaks the model if they're the same\n",
+    "data_sp = data_sp[data_sp.Mode_confirm!=data_sp.Replaced_mode]\n",
     "\n",
     "# Make sure both chosen and replaced modes are in choice sets\n",
     "data_rp = add_mode_availability(data_rp, availability_codes, 'available_modes', 'Mode_confirm', 'Replaced_mode', is_sp=False)\n",
@@ -792,6 +795,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check that mode availability is being set properly\n",
+    "# mode_choice should always be available; in RP it is Mode_confirm in SP it is Replaced_mode\n",
+    "for i, mode in enumerate(cat_code_lookup['mode_choice']):\n",
+    "    print(mode)\n",
+    "    assert sum(data[data['mode_choice']==i][f\"av_{mode}\"]) == len(data[data['mode_choice']==i])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -808,13 +824,9 @@
     "print(f\"Trips: {len(df_rp)}\")\n",
     "print(f\"Observed Choices: {len(data)}\")\n",
     "print(f\"Users: {len(np.unique(data.user_id))}\")\n",
-    "# print(f\"Trips per user: {len(data) / len(pd.unique(data.user_id))}\")\n",
-    "# print(f\"New activity: {len(df_ebike_new_travel) / len(df_ebike)}\")\n",
-    "# print(f\"Unlabeled all trips: {len(data[data.Replaced_mode==10]) / len(data)}\")\n",
-    "# print(f\"Unlabeled ebike trips (we model these): {len(df_ebike_unlabeled) / len(df_ebike)}\")\n",
-    "# print(f\"Ebike all trips: {len(df_ebike)}\")\n",
-    "# print(f\"Non-ebike all trips: {len(df_non_ebike)}\")\n",
-    "# print(f\"Sensed trips: {len(df_label_data)}\")"
+    "print(f\"Trips per user: {len(data) / len(pd.unique(data.user_id))}\")\n",
+    "print(f\"New activity: {len(df_ebike_new_travel) / len(df_ebike)}\")\n",
+    "print(f\"Ebike all trips: {len(df_ebike)}\")"
    ]
   },
   {
@@ -951,7 +963,7 @@
     "# Average and plot the confusion matrices\n",
     "confusion_mean = np.mean(confusion_holdout, axis=0).reshape(8,8)\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
-    "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values, yticklabels=all_categories[0].values, cbar=False).set(title='Random Forest Confusion Matrix (Holdout-Replaced)', xlabel='Predicted', ylabel='Actual')\n",
+    "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values, yticklabels=all_categories[0].values, cbar=False).set(title='Random Forest Confusion Matrix (Holdout)', xlabel='Predicted', ylabel='Actual')\n",
     "plt.subplots_adjust(bottom=0.25)"
    ]
   },
@@ -1053,12 +1065,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
+    "import importlib\n",
+    "importlib.reload(replacement_models)\n",
+    "\n",
     "# Train and test model\n",
-    "mxl, accuracy, f1, confusion = replacement_models.mxl(data, 'mode_choice', kf)\n",
+    "mxl, accuracy, f1, confusion = replacement_models.mxl(data, 'mode_choice')\n",
     "\n",
     "# Save scores for model comparison\n",
     "score_results['mxl_chosen_chosen'] = (np.mean(accuracy), np.mean(f1))\n",
@@ -1068,9 +1083,10 @@
     "# Average and plot the confusion matrices\n",
     "confusion_mean = np.mean(np.array(confusion), axis=0)\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
-    "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values, yticklabels=all_categories[0].values, cbar=False).set(title='Random Forest Confusion Matrix (Replaced-Replaced)', xlabel='Predicted', ylabel='Actual')\n",
+    "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values, yticklabels=all_categories[0].values, cbar=False).set(title='MXL Confusion Matrix', xlabel='Predicted', ylabel='Actual')\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "\n",
+    "# Save model parameters for prediction\n",
     "mxl_keep = mxl"
    ]
   },
@@ -1091,7 +1107,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Train and test model\n",
@@ -1105,7 +1123,7 @@
     "# Average and plot the confusion matrices\n",
     "confusion_mean = np.mean(np.array(confusion), axis=0)\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
-    "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values, yticklabels=all_categories[0].values, cbar=False).set(title='Random Forest Confusion Matrix (Replaced-Replaced)', xlabel='Predicted', ylabel='Actual')\n",
+    "sns.heatmap(confusion_mean, annot=True, fmt='.1%', cmap='YlGnBu', linewidths=.5, xticklabels=all_categories[0].values, yticklabels=all_categories[0].values, cbar=False).set(title='MNL Confusion Matrix', xlabel='Predicted', ylabel='Actual')\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "\n",
     "mnl_keep = mnl"
@@ -1428,13 +1446,6 @@
     "plt.xticks(rotation=90)\n",
     "plt.subplots_adjust(bottom=0.25)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
