--- a/viz_scripts/Ebike Usage Trends.ipynb
+++ b/viz_scripts/Ebike Usage Trends.ipynb
@@ -423,6 +423,7 @@
     "       'Walk, bike, bus, uber or lyft.', 'Prefer not to say', 'Skateboard',\n",
     "       'Car and E-Bike', 'Shared vehicle'])\n",
     "    labels=labels[0]\n",
+    "    labelz = [f'{l}, {s:0.1f}%' for l, s in zip(labels, sizes)]\n",
     "    labels1=['Motor Vehicle (Car, SUV, Van)','Bicycle', 'Public or commuter bus', 'Walk', 'Pickup truck',\n",
     "       'Work from home', 'Taxi/Limo (including services like Uber or Lyft)',\n",
     "       '', '', '','', '']\n",
@@ -435,7 +436,7 @@
     "    fig = plt.figure(figsize =(10, 10))\n",
     "    plt.pie(sizes, labels = labels1, colors=[colours[key] for key in sizes], pctdistance=.75, autopct=lambda pct: func(pct, sizes),textprops={'size': 16})\n",
     "    plt.title(title, fontsize=25)\n",
-    "    plt.legend(bbox_to_anchor=(1, 1), loc='upper left', labels = labels)\n",
+    "    plt.legend(bbox_to_anchor=(1, 1), loc='upper left', labels = labelz)\n",
     "    plt.show()\n",
     "\n",
     "MainTransport(participantDemog.TranspToJobLastWeek,'Main Mode of Transportation for Participant Users')"
@@ -523,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "standing-shanghai",
+   "id": "waiting-chosen",
    "metadata": {
     "scrolled": true
    },
@@ -1176,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reasonable-breakdown",
+   "id": "suited-compiler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prescription-crossing",
+   "id": "informational-rebate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eleven-alignment",
+   "id": "polish-thumbnail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "apart-blond",
+   "id": "current-recording",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,7 +1505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fallen-animal",
+   "id": "fatal-wholesale",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ordered-conservation",
+   "id": "guilty-victory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1843,7 +1844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thousand-characterization",
+   "id": "rural-eagle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1869,7 +1870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acoustic-ensemble",
+   "id": "nuclear-magnet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1952,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sixth-plane",
+   "id": "wanted-solution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1995,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "swiss-specific",
+   "id": "western-costume",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2039,7 +2040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wicked-nightmare",
+   "id": "martial-external",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2052,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "scientific-rachel",
+   "id": "strong-highland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2136,7 +2137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "august-given",
+   "id": "round-headquarters",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2186,7 +2187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "owned-potential",
+   "id": "covered-scheduling",
    "metadata": {},
    "outputs": [],
    "source": [
