--- a/viz_scripts/Ebike Usage Trends.ipynb
+++ b/viz_scripts/Ebike Usage Trends.ipynb
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "waiting-chosen",
+   "id": "simplified-board",
    "metadata": {
     "scrolled": true
    },
@@ -1177,7 +1177,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suited-compiler",
+   "id": "humanitarian-caution",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Returns boxplots of monthly usage by income\n",
+    "def get_ebike_percent_byIncome_boxplot(trips):\n",
+    "    df = [rows for _, rows in trips.groupby(['start_local_dt_year','start_local_dt_month'])] #spilts dataframe into month-year\n",
+    "    count = trips.start_local_dt_month.value_counts().nunique() #count is the number of unique months in the dataset\n",
+    "    countOfUsers = trips.user_id.value_counts().nunique()\n",
+    "    numOfUsers={}\n",
+    "    user={}\n",
+    "    for i in range(len(df)):  #len(df) should be 17\n",
+    "        numOfUsers['num'+str(i)]=df[i].user_id.value_counts().nunique() #number of unique users in each month\n",
+    "    for i in range(0, len(df)):\n",
+    "        user['month'+str(i)] = [rows for _, rows in df[i].groupby('user_id')] #f['u'+str(i)] is the month, the indexs are the user      \n",
+    "    timeline = pd.DataFrame({'user_id':[],'Date':[],'percent':[]})\n",
+    "    for i in range(len(df)): #iterates through month  |   these for loops calculate percent of ebike usage per month\n",
+    "        for j in range(numOfUsers['num'+str(i)]): #iterates through users per month\n",
+    "            #print(i,j)\n",
+    "            if user['month'+str(i)][j].mode_confirm.value_counts().__contains__('pilot_ebike'):\n",
+    "                ebike =user['month'+str(i)][j].mode_confirm.value_counts()['pilot_ebike']\n",
+    "            else:\n",
+    "                ebike = 0\n",
+    "            #ebike = user['month'+str(i)][j].mode_confirm.value_counts()['pilot_ebike']\n",
+    "            if sum(user['month'+str(i)][j].mode_confirm.value_counts(dropna=True)) != 0:\n",
+    "                sumx = sum(user['month'+str(i)][j].mode_confirm.value_counts(dropna=True))\n",
+    "                percent = ebike/sumx\n",
+    "            else:\n",
+    "                percent = 0\n",
+    "            timeline=timeline.append({'User': user['month'+str(i)][j].start_local_dt_month.iloc[0],'Date': pd.to_datetime(str(user['month'+str(i)][j].iloc[0].start_local_dt_year)+'-'+str(user['month'+str(i)][j].iloc[0].start_local_dt_month)),'Proportion':percent}, ignore_index=True)\n",
+    "    fig, ax = plt.subplots(figsize=(16,4))\n",
+    "    plt.title('Proportion of E-Bike Usage Over Time')\n",
+    "    plt.xlabel(\"Date\")\n",
+    "    plt.ylabel(\"Proportion of e-bike trips\")\n",
+    "    #plt.xticks(rotation=90)\n",
+    "    ax.set_xticklabels(timeline['Date'].dt.strftime('%Y-%m-%d'))\n",
+    "    #for i in range(len(timeline)-1):\n",
+    "    sns.boxplot(x = timeline.Date.dt.strftime('%Y-%m'), y = timeline.Proportion, hue=timeline.User, data=timeline,ax=ax)\n",
+    "    plt.legend([])\n",
+    "    plt.show\n",
+    "\n",
+    "get_ebike_percent_byIncome_boxplot(participant)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "federal-applicant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informational-rebate",
+   "id": "nutritional-creativity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polish-thumbnail",
+   "id": "grand-industry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "current-recording",
+   "id": "rotary-assurance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fatal-wholesale",
+   "id": "choice-overall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1636,7 +1683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "guilty-victory",
+   "id": "swiss-poland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1844,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rural-eagle",
+   "id": "pressing-papua",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1870,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nuclear-magnet",
+   "id": "popular-accident",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1953,7 +2000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wanted-solution",
+   "id": "running-tampa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "western-costume",
+   "id": "skilled-conspiracy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2040,7 +2087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "martial-external",
+   "id": "italian-square",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strong-highland",
+   "id": "inclusive-brazil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "round-headquarters",
+   "id": "attached-graphic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2187,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "covered-scheduling",
+   "id": "entitled-renaissance",
    "metadata": {},
    "outputs": [],
    "source": [
